# Snake

./: CMakeLists.txt  Food.cpp  Food.h  Game.cpp  Game.h  README.md  Renderer.cpp  Renderer.h  Snake.cpp  Snake.h  main.cpp
include/: food.h  game.h  renderer.h
include/entities/: food.h  snake.h
include/services/: high_scores.h
include/systems/: grid.h  renderer.h
src/: game.cpp  main.cpp  renderer.cpp
src/entities/: food.cpp  snake.cpp
src/services/: high_scores.cpp
src/systems/: animations.cpp  collisions.cpp  grid.cpp  playerInput.cpp  renderer.cpp
